# krb-rekey

./: .gitignore  Makefile.am  PSMakefile  PSMakefile.MW  README.md  SMakefile  acl.c  admin_file.c  admin_ldapgroups-std.c  admin_ldapgroups.c  age_keytab.c  age_keytab.pod  autogen  cltlib.c  configure.ac  depot.conf  dhp1024.pem  dhp2048.pem  dhp3072.pem  dhp4096.pem  dhp512.pem  dhp7680.pem  getnewkeys.c  getnewkeys.pod  iana.txt  krb5_portability.h  memmgt.c  memmgt.h  oldlib.c  protocol.h  rekey-locl.h  rekey.socket  rekey.spec  rekey.sql  rekey@.service.in  rekeyclt-locl.h  rekeyclt.c  rekeylib.c  rekeymgr.pod  rekeysrv-locl.h  (+10 more)
.github/workflows/: codeql.yml
lib/: Makefile.am  Makefile.in  asprintf.c  fpucw.h  frexp.c  frexpl.c  getopt.c  getopt.in.h  getopt_int.h  intprops.h  isnan.c  isnand-nolibm.h  isnand.c  isnanf-nolibm.h  isnanf.c  isnanl-nolibm.h  isnanl.c  math.in.h  memcmp.c  netdb.in.h  poll.c  poll.h  poll.in.h  printf-frexp.c  printf-frexp.h  printf-frexpl.c  printf-frexpl.h  pthread.in.h  sched.in.h  select.c  setenv.c  signbitd.c  signbitf.c  signbitl.c  sprintf.c  stdint.in.h  stdlib.in.h  strerror.c  string.in.h  sys_select.in.h  (+8 more)
m4/: gnulib-cache.m4  gnulib-comp.m4
